--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "e-commerce-back-end",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/melakusheri/E-Commerce-Back-End.git"
-  },
-  "keywords": [],
-  "author": "Melaku Sheri",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.3"
-  },
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "install": "^0.13.0",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
-  }
+    "name": "e-commerce-back-end",
+    "version": "1.0.0",
+    "description": "1. [Title](#Title)\r   2. [Description](#Description)\r   3. [License](#License)\r   4. [Installation](#Installation)\r   5. [Tests](#Tests)\r   6. [Usage](#Usage)\r   7. [Contribution](#Contribution)\r   8. [Github](#Github)\r   9. [E-mail](#Email)",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "watch": "nodemon server.js",
+        "seed": "node seeds/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/melakusheri/E-Commerce-Back-End.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/melakusheri/E-Commerce-Back-End/issues"
+    },
+    "homepage": "https://github.com/melakusheri/E-Commerce-Back-End#readme",
+    "dependencies": {
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "mysql2": "^2.3.0",
+        "nodemon": "^2.0.12",
+        "seed": "^0.4.4",
+        "sequelize": "^6.6.5"
+    }
 }
